# dezero

./: .gitignore  config.py  pyproject.toml  test.py  variable.py
core/: __init__.py  function.py
dezero/core/: __init__.py  function.py  variable.py
dezero/core/operators/: Add.py  Div.py  Mul.py  Neg.py  Pow.py  Sub.py  __init__.py
dezero/core/utils/: __init__.py  dot.py
dezero/functions/: Exp.py  Square.py
functions/: __init__.py  exp.py  function.py  square.py
functions/operators/: Add.py  Div.py  Mul.py  Neg.py  Pow.py  Sub.py  __init__.py
scripts/: autopush.sh
tests/: test_functions.py  test_operators.py  test_square.py
utils/: __init__.py  as_array.py  numeric_diff.py
